--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "express": "^4.17.1",
     "jsonschema": "^1.4.0",
     "lowdb": "^1.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
